tooling/nargo_cli/tests/snapshots/execution_success/array_dedup_regression/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2azW7bOBDHqUiyIzv+SNK0TfMEe5Ms2XJuOeyLyHYC7GWxWOwD6JkK7J72VKAv0GMPBXpsgV5aoECBHlqmHPnv8cj9GrY+VEAgihz+ZjgcjhjRgVlfgbtH7NkIMlfunn7flSmyUtHQXRfJnLlC4p4PoD1UHGzC9Gry52kxTYTxKdqfJ47p0z/E9MBPu47ze73m87EYuJMc72PbB66McUYyh66dykNXTlgfH/PvcX7SU8F+0tV3Y33FxhqCf5TsaOIk0mdPiB3rs5v109FnF8Tu6rOnFOuHwA7YPGNuU4y5WcD0GbOZHwzT32O2aueogOkje7h/aF2Q73qCrWOhDceGbainJ+iRWJEiK1ZkdRRZFO8js+0/mg+eL7TzYsB8FME4uE4aD/cp5puY1f3m7nY8b6APz6+hUMd9x9cF+ofH3pWKf8pFYuQY0uFPJjyv6vJnC55blfmXUg5V5F8Tv+eH37x7+l74eUX8Iz/2N/uJgZ/4b+Jz6IffxM/IC3+yJP7Yj/8b/rEffrMvPvHDL4l/6md+m/V1x4/9c+KfeeHnjf/v+vFPSvx7fvwzI/59P/avaI94btYX318/gHq9vUtefOn+mvT3mK2+9tcPmD3cP3x/fSHYOhba+B7nQtBzIeiRWLEiq6PI6iqyEkVWT5Gl6fv+ntp1pMga7ClLc4xDRZbmPI721K6xIutYkaWZc04UWaeKrDuKrH3NhWeKrH1dQ5oxoZm/7iqyNNf2vsbqr33hz8vRv/aFX8e6p8jSjAnNPKG5N9nX+LrvgeX7DF36lq/In0rf8o0eP/N3TjpPPZ+FZtJ3fEXfpPQtRfpNhJ2Ph1Bv/+hsKzbreMW+MbSj/H/A/NeVba4dMTlb5md4fT++bc7w6P9RPMNDnWTbAZPHMo6Z6v53d+kMD3/HEAp1u87woi9gBSBzwOTJvk6LfNQynkcwnrctzNjI56BxC/MxMN+5Mn1rCOt1f4wJe0XQpvnbA6vnPdixNcf15rgH0BYK8tz3Q0Eev62Qz8ZMHvPXSOh3Dv7h/XysGfrfDNcM6hzA+FEey/aKWd0Td5fWzGCH70gX+u5csOdb520kyEvfpo/MOtb/+vuPP/8x7MLFyl96aFjcYkDO+vdauNgXr7iljZ7zHZwB6JKSfwg6UP6lu9uxPmVMntx54khabMDkhTJRiw3P3N0G1kmwyZReamhX20vtOTDftdhpjE5iIHukFyb2RdlYkOWbf2qLhP4YX5z1wt2lg3rNhIMf84zZfoG9bBmPMXKMUqxIG58IuA9hfLf+qfXHV84/JdRbW+u1n/HHPIbpj5n8a/fMN4g0nqtvtPOmrLKbvLqpptVqVSwrPg/GbP4QVFt/Vebz5aRYlotpXuWzH66/mFblsiqz7LLIrots+qP1L6ezxfKjEel1Zh8nn9NP74dOvW7HDZS9uu6Z8jeXJ17M5Alg18WBKzfvqXpbn5U73iEXtNxvGUJdVG/WJfW2fFhvy5PuXr1tI7X1oQ03d/Y6cs/oL2SRHTGTHzoAzckh9KH+Y0H/IdO/YbdQh7mLs0KhjuTt/HRdpya/g27tw/1bnYyPddw2ih0f62oyn88uJ4u0KFfLm1WRf25dfQCQH95nLjMAAA==",
  "debug_symbols": "zZzNSiNREEbfpddZ3K/uv68yDBI1SiAkEuPAIL77dEviBNNmqM1wNpLWOqRihZMm1HffhofV3evT7Xr7uHsZbn68DZvd/fKw3m3Hq7f3xXC3X28266fb818PYfqh/FH/8rzcTpcvh+X+MNzkthhW24fxQR/px/VmNT4M7z8Xg4qzvjrrm7O+++otOOvlrDdnfXTWJ2e9c77mnK8552vO+ZpzvtE53+icb3TONzrnG53zjbPzleoRkNpXoriJ6iaam+heIgU3ITdhbmJ23srpRJR8TiwuSlvXsbRb/Cw185ROfSRIHxnSR4H0USF9NEgfndFHDpA+BOnDIH1AfJohPs0Qn2aITzPEpxni0wzxaYH4tEB8WiA+LRCfFohPC8SnBeLTAvFpgfi0QHxaIT6tEJ9WiE8rxKcV4tMK8WmF+LRCfFohPq0QnzaITxvEpw3i0wbxaYP4tEF82iA+bRCfNohPG8SnHeLTDvFph/i0Q3zaIT7tEJ92iE87xKcd4tMO8akCRKgKEKMqQJSqAHGqAkSqChCrKkC0qgDxqgJErAoUs4piVlHMKopZRTGrKGYVxayimFUUs4piVlHMahSzGsWsRjGrUcxqFLMaxaxGMatRzGoUsxrFrJFi1kgxa6SYNVLMGilmjRSzRopZI8WskWLWSDFropg1UcyaKGalZKlECVOJkqYSJU4lSp5KlECVKIkqUSJVomSqRAlViZKqEiVWJUquSpRglSjJKlGiVaJkq0QJV4mSrhIlXiVKvkqUgJUoCStRIlaiZKxECVmJkrLSfEyi9iPRwnkbE9DcJ4TomxX3q0jyI9mPFD9S/UjzI+7DYfTNPnK0ExLrBSI/Yn4k+pH56afT+3j8fuICyX6k+JH56Vv/fC2Xc2l+pHsR+2Z58ioiP2J+JPoRyAe5UZb8jLLkZ5QlP6Ms+Rllyc8oS35GWfKz/7nkV9Ppo7me3TKdGomURhKlkXmzft52jjdzXz8V5pfPxrf9ETFdnmTZ3cj8Qtd1RH7E/Ej0I8mPzM5l1P4JsXCBFD9S/Uj7F1IvkO5G5pdOriPyI+ZHkg95H69+Lffr5d1mdTwR9/F1e392QO7h9/Pqy1m5z/vd/erhdb+aTs39e2Du9D+xbAurcbo5/biMdWHJpsvp5VtN41/L+KzjM/8B",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_add(y)\")]\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_sub(y)\")]\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_mul(y)\")]\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::ops::arith::WrappingMul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test]\n    fn test_wrapping_mul() {\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, zero.wrapping_mul(one));\n\n        // 0*1==0\n        assert_eq(zero, one.wrapping_mul(zero));\n\n        // 1*1==1\n        assert_eq(one, one.wrapping_mul(one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, zero.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, two_pow_64.wrapping_mul(zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, two_pow_64.wrapping_mul(one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, one.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, two_pow_64.wrapping_mul(two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, u128_max.wrapping_mul(u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "unconstrained fn main(x: u32) {\n    let a1 = [1, 2, 3, 4, 5];\n\n    for i in 0..5 {\n        let mut a2 = [1, 2, 3, 4, 5];\n        a2[x + i] = 128;\n        println(a2);\n\n        if i != 0 {\n            assert(a2[x + i - 1] != 128);\n        }\n    }\n\n    // Can't use `== [1, 2, 3, 4, 5]` here, that make_array may get\n    // deduplicated to equal a1 in the bugged version\n    assert_eq(a1[0], 1);\n    assert_eq(a1[1], 2);\n    assert_eq(a1[2], 3);\n    assert_eq(a1[3], 4);\n    assert_eq(a1[4], 5);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
