tooling/nargo_cli/tests/snapshots/execution_success/array_dedup_regression/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2azW7bOBDHqViyLduJ3aTtbrDAPsCeLEu2nMMCAbrYF9gHWMhyDOylXRQFWqBAoR6KXnor0L5uy5Qj/T0aJf0Ytj6UQCCKHP7mg+SIkhOYpgTuGrJ7I8hcuuv820qiyJqLht5USOZ3V4nd/RH09xSdjZleTf56ni1jwT9F+9PYMX3Gh5ge+POB4/xVNXzui4EryfExtv/Y1XGdkczQ9VN96uoxG+Nj/j3Oz/xMsP8IfLPlQdX0GUXdYxfLxyyWNFeKuup1GOqzF8SO9Nn1/uzrszNiD/TZS9pLQ2AHbJ4xdyqu6VXA9Bmzn38M0z9itmrnwIDpI3t4fGjfUexGgq0zoQ99wz7UMxL0SKxQkRUpsvqKLFrvU9OOH80HzxfaeTdgMQrBD66T/OExxXwTsbY/3NX68wzG8PzaE9p47Pi+wPj4eq7Hgr+K/CXPq9qHYH+5dT33nD8Tyj/SOcrGK4V2XK+RadYTjo2gH+VzYK5c3Z4Jpqa9D/i+HPnxvd6XY8fDfSnlySMmj3X0mdr+dFdpX+LZpCe03bQvw89gSWc87m+/Qz7s8OcB+PO8gxkZObdFHcy/gfnC1ens3aua8bgmbAmhT/M8YfW8BDtac1zt+z2Bvp4gz2N/LMhPQIZiNmPy0rMMx40hPnycjz1z4ni4Z1DnBPxHeazbErG2f9xV2jOTG2JHujB2Y8Ge2LRjpxifq2PBRyrUNwXdfdY3gz60n5ceu0efbOzeA5fLYR3H4VxKz4OIyT9yV+vDv4zJczbPB3GHDZiTUCbssKE0jc+/BftM6VklnVn5s2oHzBcddhqjs9/JHuk5iGNRNhJkB0b2PRTG20Lv+Zz10F1j016DmnnkFLjGtJ9Ljzr8MUZeo7RWpPNMCNwU/LuOT6XvX77+lCevba2aOPM9i/ojJv/U3eN6RX8uv9LOXV4ku7TYFctiu83Kgs+DgdiNPegv8nRdLrIy3yzTIl19d/3ZssjLIk+Siyy5ypLl99ZfLleb8qMR86vE3i5u00/Pin7V9OO5yJaBu6f8zeWJFzH5VyT78e+1q1POiQR9Vu7dDXJBx/WaIbSF1X5bXLXle1VbnnSPqraN1DeGPjyz2TJx9xgvZJEdEZN/6+5pToYwhsbPBP1Dpn/PbqENcxdn9YQ2krfz84Z47oq+a3/nutbJ+NjGbaO1c9u3YMr5lyq25hvp+44ef7GQvl/o8Vcb6fuFIv+Cf79Q5l8Rf+iHn0nfSPT4aSF9h1C0P5HOWorrfyG98yjyL6R3TsX9VRL/xE/8a/7UD7/+/jjzw8+Jf8fP/Nb769SP/Wvin3nhp3X87/qJT/2N9p6f+KyIf9+P/Vt6Z/rFNKU+k7n6r9Cud45Is885K6L+EbPVx7kG9ZE9PD7897tzwdaZ0MfPOOeCnnNBj8QKFVmRIquvyBoosoaKLM3Yxwdq10iRNT5QlqaPE0WW5jweH6hdJ4qsqSJLM+fMFFl3FFmniqxDzYVniqxD3UOaa0Izf91VZGnu7UNdqz/PhT8uR/88F34Z654iS3NNaOYJzbPJoa6v+x5Z0v8dHgmsgPmF8tL7tn1GUU76//F/D58YVhBEcMmwqMOAlPHoh3LO5XzTweW2pALHxw+Ni/V6dbHYzLN8W+62WXrbD40fAOfF/BJKNAAA",
  "debug_symbols": "tdrNSiNBFIbhe+l1FnW++jvlrQwiUVsJhERiHBjEe59uSZzQFg7vIhtJS72VyJNAe1Lvw+N4//Z8t9k97V+Hm1/vw3b/sD5u9rvp6v1jNdwfNtvt5vnu8tdDmH9Y+Vz/+rLezZevx/XhONxkXw3j7nF60Kb6abMdp4fh43Y1WIXrHa5vbL0CXG9wveD6CNcnuD7D9dBX0FfQV9A3Qt8IfSP0jdA3Qt8IfWPX16yeAjNfFhUXjotGixRwYbgQLiItcvdV1XYKPCzXZ/wMWDxj8YzFMxYvWLxg8YLFS1886lzEuiwSLjIuCi765snORUrLwnHRaFH75mpff8fSoxouhIuIi4SLjIuCi4oLx0WjhWNzx+aOzR2bOzb3vnlO56Lky2L1bam380epKX4tlT43L9fcvF5zc7/m5u2Km7dwzc3tmpv3PyBf9yXmefHmbd03ryycCtnyVrQVXFRcOC4aLSwEnhhPuiQK53sTKXxLIk8ST/L/kvotKTypPHGeNJyY4SR3KX/6PFqOPEk8yTwpPKk8cZ40nPT/xfg5MZ5w/cL1C9cvXL9w/cL1C9cvXL9y/cr1K9evXL9y/cr1K9evXL9y/cr1nes713eu71zfub5zfef6zvWd6zvXb1y/cf3G9RvXb1y/cf3G9RvXb1y/YX2FwBPjiXgSeZJ4knlSeFJ54jzh+sb1jesb1zeub1zfuL5xfeP6xvWN64vri+uL64vri+uL64vri+uL64vrR64fuX7k+pHrR64fuX7k+pHrR64fuX7i+onrJ66fuH7i+onrJ66fuH7i+onrZ66fuT6f9YnP+sRnfeKzPvFZn/isT3zWJz7rE5/1ic/6xGd94rM+8Vmf+KxPfNYnPusTn/WJz/rEZ33isz7xWZ/4rE981ic+6xOf9YnP+sRnferP+mo6f/9SL85QnZL+rO/nxFjyMV39Xh826/vteDpU+/S2e7g4Y3v88zIujtu+HPYP4+PbYZwP3v47czu/2vncgOVwO39HNV9aWpm1+XJ+YfK4kufpWadn/gs=",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_add(y)\")]\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_sub(y)\")]\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_mul(y)\")]\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::ops::arith::WrappingMul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test]\n    fn test_wrapping_mul() {\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, zero.wrapping_mul(one));\n\n        // 0*1==0\n        assert_eq(zero, one.wrapping_mul(zero));\n\n        // 1*1==1\n        assert_eq(one, one.wrapping_mul(one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, zero.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, two_pow_64.wrapping_mul(zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, two_pow_64.wrapping_mul(one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, one.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, two_pow_64.wrapping_mul(two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, u128_max.wrapping_mul(u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "unconstrained fn main(x: u32) {\n    let a1 = [1, 2, 3, 4, 5];\n\n    for i in 0..5 {\n        let mut a2 = [1, 2, 3, 4, 5];\n        a2[x + i] = 128;\n        println(a2);\n\n        if i != 0 {\n            assert(a2[x + i - 1] != 128);\n        }\n    }\n\n    // Can't use `== [1, 2, 3, 4, 5]` here, that make_array may get\n    // deduplicated to equal a1 in the bugged version\n    assert_eq(a1[0], 1);\n    assert_eq(a1[1], 2);\n    assert_eq(a1[2], 3);\n    assert_eq(a1[3], 4);\n    assert_eq(a1[4], 5);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
